--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.code-box-demo {
+	text-align: center;
+}
+.ant-layout-header {
+	height: 10vh !important;
+	background: #7dbcea !important;
+}
+.ant-layout-footer {
+	background: #7dbcea !important;
+	color: #fff;
+	height: 10vh !important;
+}
+[data-theme="dark"] .ant-layout-header {
+	background: #6aa0c7;
+}
+[data-theme="dark"] .ant-layout-footer {
+	background: #6aa0c7;
+}
+.ant-layout-footer {
+	line-height: 1.5;
+}
+.ant-layout-sider {
+	background: #3ba0e9 !important;
+	color: #fff;
+	min-width: 20vw !important;
+}
+[data-theme="dark"] .ant-layout-sider {
+	background: #3499ec;
+}
+.ant-layout-content {
+	background: rgba(16, 142, 233, 1);
+	color: #fff;
+	min-height: 80vh !important;
+}
+[data-theme="dark"] .ant-layout-content {
+	background: #107bcb;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 320px) and (max-width: 1025px) {
+	.ant-layout-sider {
+		display: none !important;
+	}
+	.ant-layout-content {
+		min-width: 90vw !important;
+	}
 }
