url input added

--- a/src/containers/url/index.css
+++ b/src/containers/url/index.css
@@ -1,6 +1,24 @@
 .method {
 	padding: 1vw;
-	width: 10vw;
+	width: 9vw;
+	font-size: 1vw;
+}
+.urlComponent {
+	display: flex;
+	color: white !important;
+}
+.inputUrl {
+	color: white !important;
+	text-decoration-color: white !important;
+}
+.ui.transparent.input > input {
+	color: white !important;
+	font-style: italic;
+}
+.url {
+	width: 36vw;
+	padding-top: 3vh;
+	color: white !important;
 }
 .selectTag {
 	background-color: #404040 !important;
@@ -11,5 +29,13 @@
 @media (min-width: 320px) and (max-width: 1025px) {
 	.method {
 		width: 25vw;
+		font-size: 2vw;
+		text-align: left;
+	}
+	.url {
+		width: 54vw;
+		padding-top: 1vh;
+		color: white !important;
+		font-size: 3vw;
 	}
 }
