--- a/src/containers/url/index.css
+++ b/src/containers/url/index.css
@@ -1,10 +1,12 @@
 .method {
-	padding: 1vw;
+	margin: 1vw;
 	width: 9vw;
 	font-size: 1vw;
+	height: 5.5vh;
 }
 .urlComponent {
 	display: flex;
+	justify-content: space-around;
 	color: white !important;
 }
 .inputUrl {
@@ -15,27 +17,67 @@
 	color: white !important;
 	font-style: italic;
 }
+
 .url {
 	width: 36vw;
-	padding-top: 3vh;
+	margin-top: 3vh;
 	color: white !important;
 }
 .selectTag {
 	background-color: #404040 !important;
 	color: white !important;
-	padding-left: 1.5vw;
+
 	width: 2vw;
+}
+.send {
+	margin: 1vw;
+	width: 9vw;
+	font-size: 1vw;
+}
+.submitBtn {
+	height: 5.5vh;
+}
+.collectionSelect {
+	margin: 1vw;
+	width: 9vw;
+	font-size: 1vw;
+	height: 5.5vh;
+}
+.sendMobile {
+	display: none;
 }
 @media (min-width: 320px) and (max-width: 1025px) {
 	.method {
 		width: 25vw;
+		height: 4vh;
 		font-size: 2vw;
 		text-align: left;
 	}
+	.urlComponent {
+		justify-content: space-between;
+	}
 	.url {
-		width: 54vw;
-		padding-top: 1vh;
+		width: 40vw;
+		margin-top: 1vh;
 		color: white !important;
 		font-size: 3vw;
+	}
+	.collectionSelect {
+		width: 25vw;
+		height: 4vh;
+		font-size: 2vw;
+		text-align: left;
+	}
+	.send {
+		display: none;
+	}
+	.sendMobile {
+		display: inline;
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+	}
+	.collectionMobileSelect {
+		display: inline;
 	}
 }
