--- a/src/components/postman/containers/main/index.css
+++ b/src/components/postman/containers/main/index.css
@@ -9,7 +9,7 @@
 .ant-layout-footer {
 	background: #1a1a2e !important;
 	color: #fff !important;
-	height: 5vh !important;
+	height: 8vh !important;
 	border: 2px solid black;
 }
 
@@ -18,6 +18,7 @@
 }
 .main {
 	display: flex;
+	border: 2px solid black;
 }
 [data-theme="dark"] .ant-layout-sider {
 	background: #3499ec;
