--- a/src/components/postman/containers/title/index.css
+++ b/src/components/postman/containers/title/index.css
@@ -1,14 +1,24 @@
 .title {
+	display: flex;
+	/* justify-content: space-around; */
 	min-height: 50px;
 	background-color: #1b1c1d;
 
-	padding-top: 12px;
 	padding-left: 1vw;
 
 	border: 2px solid black;
 }
+.inputUrl {
+	width: 66vw;
+}
+.loginLetter {
+	padding-top: 10px;
+}
 @media (min-width: 320px) and (max-width: 1020px) {
 	.title {
 		height: 3vh;
+	}
+	.inputUrl {
+		width: 85vw;
 	}
 }
