--- a/src/components/postman/containers/url/index.css
+++ b/src/components/postman/containers/url/index.css
@@ -57,16 +57,18 @@
 		justify-content: space-between;
 	}
 	.url {
-		width: 40vw;
+		width: 45vw;
 		margin-top: 1vh;
 		color: white !important;
 		font-size: 3vw;
+		padding-left: 0;
 	}
 	.collectionSelect {
-		width: 25vw;
+		width: 15vw;
 		height: 4vh;
 		font-size: 2vw;
 		text-align: left;
+		padding-left: 0;
 	}
 	.send {
 		display: none;
