--- a/src/components/postman/containers/body/index.css
+++ b/src/components/postman/containers/body/index.css
@@ -2,11 +2,12 @@
 	display: none;
 }
 
-.content {
+.bodyContent {
 	min-height: 44vh;
 	border: 2px solid black;
 	background: #1b1c1d;
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 @media (min-width: 320px) and (max-width: 1025px) {
 	.openSidebar {
