--- a/src/components/postman/containers/sidebar/Tabs/index.css
+++ b/src/components/postman/containers/sidebar/Tabs/index.css
@@ -6,3 +6,8 @@
 	height: 80vh;
 	overflow-y: scroll;
 }
+@media (min-width: 320px) and (max-width: 1025px) {
+	.tabPane {
+		font-size: 2.5vw;
+	}
+}
