--- a/src/components/postman/App.css
+++ b/src/components/postman/App.css
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	font-family: 'Quicksand', 'arial';
 	font-size: 1.25vw;
+	background-color: black;
 }
 @media (min-width: 320px) and (max-width: 1025px) {
 	.App {
