--- a/src/components/postman/containers/response/index.css
+++ b/src/components/postman/containers/response/index.css
@@ -1,6 +1,36 @@
-.response {
-	min-height: 41vh;
-	border: 2px solid black;
+.responseBefore {
+	display: flex;
+	min-height: 42vh;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 	background: #1b1c1d;
 	overflow: scroll;
+	border: 2px solid black;
+}
+.responseContent {
+	overflow: scroll;
+	height: 40vh;
+}
+.loaderText {
+	text-align: center;
+	margin-top: 1vh;
+}
+.loaderInResponse {
+	padding: 5vh;
+	text-align: center;
+	/* margin: 20px 0 20px 0; */
+	text-decoration: none;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
+	color: #fff;
+	font-size: 7rem;
+	font-family: 'Poppins';
+}
+.loaderInResponse:hover {
+	color: #228dff;
+	-webkit-animation: none;
+	-moz-animation: none;
+	animation: none;
 }
