--- a/src/components/postman/containers/response/index.css
+++ b/src/components/postman/containers/response/index.css
@@ -7,6 +7,14 @@
 	background: #1b1c1d;
 	overflow: scroll;
 }
+.testResponse {
+	overflow: scroll;
+	height: 40vh;
+}
+.response_tests {
+	overflow: scroll;
+	border: 1px solid black;
+}
 .responseContent {
 	overflow: scroll;
 	height: 40vh;
