--- a/src/components/postman/App.css
+++ b/src/components/postman/App.css
@@ -1,6 +1,7 @@
 .App {
 	color: #ffffff !important;
 	overflow: hidden;
+
 	font-family: 'Quicksand', 'arial';
 	font-size: 1.25vw;
 	background-color: black;
@@ -8,5 +9,6 @@
 @media (min-width: 320px) and (max-width: 1025px) {
 	.App {
 		font-size: 4vw;
+		overflow: hidden;
 	}
 }
